Tối ưu giao diện POPUP màn KÝ HSM + CHi tiết luồng xử lý hợp đồng + popup Chọn hình ảnh chữ ký hoặc con dấu

--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -54,7 +54,7 @@
     </div>
     <div style="padding-top: 10px;">
       <input type="checkbox" value="hidden_phone" [(ngModel)]="hidden_phone"/>
-      <span style="margin-left: 2%; font-size: 13px; color:#00186D">{{'confirm.public.phone.pki' | translate}}</span>
+      <span style="margin-left: 2%; font-size: 13px; color:#00186D; font-weight: 500">{{'confirm.public.phone.pki' | translate}}</span>
     </div>
 
     <div class="select-option">
