--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.scss
@@ -64,9 +64,11 @@
   justify-content: space-between;
   position: relative;
   background: #F7F9FE;
+  border: 1px solid #E6EDFA;
   border-radius: 8px;
 }
 .input-line1 {
+  border: 1px solid #E6EDFA;
   display: flex;
   //justify-content: space-between;
   position: relative;
