Thay đổi title popup upload ảnh chữ ký hoặc con dấu trường hợp ký nhiều , ký đơn + css khung cố định cho ảnh

--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -27,7 +27,7 @@
 
       <!--TH dialog chữ ký ảnh-->
       <div *ngIf="typeImageSignatureRadio == 1 && !this.data.mark">
-        <label class="align-select">Chữ ký đã tạo trên hệ thống:</label>
+<!--        <label class="align-select">Chữ ký đã tạo trên hệ thống:</label>-->
         <div class="image-sign-acc-2 mt-4 d-flex justify-content-center align-items-center" style="max-height: 600px;">
           <img *ngIf="imgSignAccountSelect" [src]="imgSignAccountSelect" alt="" style="max-height: 600px;">
           <div *ngIf="!datas.imgSignAcc" style="margin-top: 12rem;">
@@ -89,6 +89,6 @@
       </button>
     </div>
   </div>
-  
- 
+
+
 </div>
